feat: package and verify web console
